UPDATE en/Template.properties translate code comments

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -1,4 +1,4 @@
-; address - Addressen
+; address - Address
 addressAddAddress = "New address"
 addressAdditionalAddress1 = "Additional address information 1"
 addressAdditionalAddress2 = "Additional address information 2"
@@ -34,8 +34,8 @@ addressTelephone = "Phone number"
 addressTitle = "Title"
 addressVatNumber = "VAT number"
 addressZip = "Postcode"
-; address - Addressen
-; basket - Warenkorb
+; address - Address
+; basket - Shopping cart
 basket = "Shopping cart"
 basketAdditionalOptions = "Your additional options (price per item)"
 basketAvailability = "Availability"
@@ -59,15 +59,15 @@ basketSum = "Total"
 basketTotalSum = "Total"
 basketValue = "Value of items"
 basketVAT = "VAT"
-; basket - Warenkorb
-; cancellationForm - Widerrufsformular
+; basket - Shopping cart
+; cancellationForm - Cancellation form
 cancellationForm = "Cancellation:hyphen form"
 cancellationFormPrint = "Print"
-; cancellationForm - Widerrufsformular
-; cancellationRights - Widerrufsbelehrung
+; cancellationForm - Cancellation form
+; cancellationRights - Cancellation rights
 cancellationRights = "Cancellation:hyphen rights"
-; cancellationRights - Widerrufsbelehrung
-; checkout - Kaufabwicklung
+; cancellationRights - Cancellation rights
+; checkout - Checkout
 checkout = "Checkout"
 checkoutBasket = "Shopping cart"
 checkoutBuyNow = "Order now"
@@ -93,8 +93,8 @@ checkoutShippingProfilePriceChanged="The shipping costs have been updated."
 checkoutSum = "Total"
 checkoutTotalSum = "Total"
 checkoutValue = "Value of items"
-; checkout - Kaufabwicklung
-; contact - Kontaktseite
+; checkout - Checkout
+; contact - Contact page
 contact = "Contact"
 contactAcceptPrivacyPolicy = "I hereby confirm that I have read the :policy."
 contactCheckEntries = "Please check the entries."
@@ -117,8 +117,8 @@ contactSendSuccess = "Your request has been successfully sent."
 contactShopMessage = "You have a question or a request? Please do not hesitate to contact us. Simply fill out the form and we will respond to your request as soon as possible."
 contactSubject = "Subject"
 contactVatNumber="Vat number"
-; contact - Kontaktseite
-; coupon - Gutschein
+; contact - Contact page
+; coupon - Coupon
 couponAlreadyUsedOrInvalidCouponCode = "The coupon has already been used or is invalid."
 couponCampaignExpired = "Unfortunately, the coupon has expired."
 couponCampaignNoWebstoreActivated = "The coupon could not be redeemed. Client not activated."
@@ -146,8 +146,8 @@ couponRemoveFailure = "The coupon could not be removed."
 couponRemoveSuccess = "The coupon has been removed successfully."
 couponWrongCustomerGroup = "The coupon can only be redeemed by customers with the correct customer class."
 couponWrongCustomerType = "The coupon can only be redeemed by customers with the correct customer type."
-; coupon - Gutschein
-; dev - Entwickler
+; coupon - Coupon
+; dev - Developer
 devDateFormat = "d.m.Y"
 devDateFormatMoment = "DD.MM.YYYY"
 devDateTimeFormat = "d.m.Y, H:i"
@@ -158,7 +158,7 @@ devVueErrorLink = "Open the forum"
 devVueErrorLinkURL = "https://forum.plentymarkets.com/t/technologie-update-in-ceres-vue2-und-vuex/77116"
 devVueErrorMessage = "Please check whether your active plugins are compatible with Ceres 2.<br/>For further information about the Ceres 2 update, refer to the plentymarkets forum."
 devVueErrorTitle = "Vue.js could not be initialised."
-; dev - Entwickler
+; dev - Developer
 ; footer - Footer
 footerAllRightsReserved = "All rights reserved."
 footerCancellationForm = "Cancellation:hyphen form"
@@ -197,12 +197,12 @@ headerState = "State/Province"
 headerTr = "Turkish"
 headerVn = "Vietnamese"
 ; header - Header
-; homepage - Startseite
+; homepage - Homepage
 homepageBack = "Back"
 homepageNext = "Next"
 homepageShowAll = "Show all"
-; homepage - Startseite
-; item - Artikel
+; homepage - Homepage
+; item - Item
 itemApply = "Apply"
 itemAvailabilityAverageDays_asc = "Availability ⬆"
 itemAvailabilityAverageDays_desc = "Availability ⬇"
@@ -233,13 +233,13 @@ itemVariationCustomNumber_asc = "Variation number ⬆"
 itemVariationCustomNumber_desc = "Variation number ⬇"
 itemVariationLastUpdateTimestamp_asc = "Last update"
 itemVariationLastUpdateTimestamp_desc = "First update"
-; item - Artikel
-; itemSearch - Artikelsuche
+; item - Item
+; itemSearch - Item search
 itemSearchResults = "Search results for:"
-; itemSearch - Artikelsuche
-; legalDisclosure - legalDisclosure
+; itemSearch - Item search
+; legalDisclosure - Legal disclosure
 legalDisclosure = "Legal disclosure"
-; legalDisclosure - legalDisclosure
+; legalDisclosure - Legal disclosure
 ; login - Login
 login = "Log in"
 loginBackToLogin = "Back"
@@ -301,19 +301,19 @@ myAccountSave = "Save"
 myAccountSettings = "Account settings"
 myAccountShippingAddresses = "Delivery addresses"
 ; myAccount - My account
-; notFound - Nicht gefunden
+; notFound - Not found
 notFoundHomepage = "Homepage"
 notFoundOops = "Oops, something went terribly wrong!"
 notFoundPage = "The requested page was not found."
-; notFound - Nicht gefunden
-; notifications - Benachrichtigungen
+; notFound - Not found
+; notifications - Notifications
 notificationsCalculateShippingFailed = "Error while calculating shipping costs. Please contact the provider."
 notificationsCheckPassword="The passwords do not match."
 notificationsInvalidResetPasswordUrl="The entered URL is invalid or expired."
 notificationsItemNotAdded = "The item could not be added."
 notificationsNotEnoughStockItem = "There is not enough stock available for the selected item quantity."
-; notifications - Benachrichtigungen
-; orderConfirmation - Auftragsbestätigung
+; notifications - Notifications
+; orderConfirmation - Order confirmation
 orderConfirmation = "Order confirmation"
 orderConfirmationDate = "Order date:"
 orderConfirmationEstimatedShippingDate = "Estimated shipping date"
@@ -339,8 +339,8 @@ orderConfirmationThanks = "Thank you!"
 orderConfirmationTotal = "Total"
 orderConfirmationVAT = "VAT"
 orderConfirmationWillBeProcessed = "Your order is being processed. Here, you will find an overview:"
-; orderConfirmation - Auftragsbestätigung
-; orderHistory - Auftragshistorie
+; orderConfirmation - Order confirmation
+; orderHistory - Order history
 orderHistory = "Order history"
 orderHistoryCancel = "Cancel"
 orderHistoryChange = "Change"
@@ -366,11 +366,11 @@ orderHistoryReturnSendBack = "Return items"
 orderHistoryShow = "Show :countStart - :countEnd of :orderMaxCount orders"
 orderHistoryStatus = "Status:"
 orderHistoryTime = ""
-; orderHistory - Auftragshistorie
-; privacyPolicy - Datenschutzerklärung
+; orderHistory - Order history
+; privacyPolicy - Privacy policy
 privacyPolicy = "Privacy:hyphen policy"
-; privacyPolicy - Datenschutzerklärung
-; reg - Registrierung
+; privacyPolicy - Privacy policy
+; reg - Registration
 regContactInformations = "Registration information"
 regContactInfoText1 = "We offer the storage of your personal details in a password-protected customer account, in order for you not to have to enter your name and address during your next purchase."
 regContactInfoText2 = "Your address data will be saved by completing the registration."
@@ -388,8 +388,8 @@ regRegister = "Register"
 regRegisterAccount = "Register first"
 regRepeatPassword = "Repeat password"
 regSuccessful = "You have been registered successfully."
-; reg - Registrierung
-; resetPw - Passwort zurücksetzen
+; reg - Registration
+; resetPw - Reset password
 resetPwChangePasswordFailed = "The password could not be changed."
 resetPwChangePasswordSuccessful = "The password has been changed successfully."
 resetPwCheckPassword="The passwords do not match."
@@ -405,8 +405,8 @@ resetPwRepeatNewPassword = "Please re-enter your password."
 resetPwRepeatPassword = "Repeat password"
 resetPwResetPassword="Reset password"
 resetPwSave = "Save"
-; resetPw - Passwort zurücksetzen
-; return - Retouren
+; resetPw - Reset password
+; return - Return
 return = "Return"
 returnCancel = "Cancel"
 returnCenter = "Return center"
@@ -415,15 +415,15 @@ returnReason = "Please state the reason for this return (optional)"
 returnSelectAll = "Select all"
 returnSendBack = "Return items"
 returnTrigger = "Initiate return"
-; return - Retouren
-; returnConfirmation - Returenbestätigung
+; return - Return
+; returnConfirmation - Return confirmation
 returnConfirmationHomepage = "Homepage"
 returnConfirmationInfo = "We have registered your return request. We will keep you updated on the process."
 returnConfirmationMyAccount = "My account"
 returnConfirmationThanks = "Thank you!"
 returnConfirmationTitle = "Return request registered"
-; returnConfirmation - Returenbestätigung
-; returnHistory - Retourenhistorie
+; returnConfirmation - Return confirmation
+; returnHistory - Return history
 returnHistory = "Return history"
 returnHistoryDate = "Return date"
 returnHistoryOops = "Oops, something went terribly wrong!"
@@ -436,11 +436,11 @@ returnHistoryReturnShowMore = "Show more"
 returnHistoryShow = "Show :countStart - :countEnd of :orderMaxCount orders"
 returnHistoryStatus = "Status:"
 returnHistoryTime = ""
-; returnHistory - Retourenhistorie
-; shippingInfo - Versandinformationen
+; returnHistory - Return history
+; shippingInfo - Shipping information
 shippingInfoCosts = "Shipping"
-; shippingInfo - Versandinformationen
-; singleItem - Artikeleinzelansicht
+; shippingInfo - Shipping information
+; singleItem - Single item view
 singleItemAdded = "The item was placed in the shopping cart."
 singleItemAddToBasket = "Add to shopping cart"
 singleItemAge = "Age rating"
@@ -481,15 +481,15 @@ singleItemWishListAdd = "Add to wish list"
 singleItemWishListAdded = "The item was added to your wish list."
 singleItemWishListRemove = "Remove from wish list"
 singleItemWishListRemoved = "The item was removed from your wish list."
-; singleItem - Artikeleinzelansicht
-; termsAndConditions - AGB
+; singleItem - Single item view
+; termsAndConditions - Terms and conditions
 termsAndConditions = "Terms and conditions"
-; termsAndConditions - AGB
-; wishList - Wunschliste
+; termsAndConditions - Terms and conditions
+; wishList - Wish list
 wishList = "Wish list"
 wishListNoItems = "Your wish list is empty."
 wishListRemoved = "The item was removed from your wish list."
-; wishList - Wunschliste
+; wishList - Wish list
 
 ; unused
 
