added company name to the properties

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -184,6 +184,7 @@ footerStoreFeature2 = "Kostenloser Versand & Rückversand"
 footerStoreFeature3 = "100 Tage Rückgaberecht"
 ; footer - Footer
 ; header - Header
+headerCompanyName = "Ceres Webshop"
 headerCountry = "Land"
 headerCurrency = "Währung"
 headerSelectLanguage = "Sprache"
