--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -184,6 +184,7 @@ footerStoreFeature2 = "Free shipping & return"
 footerStoreFeature3 = "100-day return policy"
 ; footer - Footer
 ; header - Header
+headerCompanyName = "Ceres Webshop"
 headerCountry = "Country"
 headerCurrency = "Currency"
 headerSelectLanguage = "Language"
