FIX typo in retrun confirmation

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -22,7 +22,7 @@ orderHistory = "Auftragshistorie"
 privacyPolicy = "Datenschutzerklärung"
 reg = "Registrierung"
 resetPw = "Passwort zurücksetzen"
-returnConfirmation = "Returenbestätigung"
+returnConfirmation = "Retourenbestätigung"
 returnHistory = "Retourenhistorie"
 return = "Retouren"
 shippingInfo = "Versandinformationen"
