--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -416,13 +416,13 @@ returnSelectAll = "Alle auswählen"
 returnSendBack = "Artikel zurücksenden"
 returnTrigger = "Retoure auslösen"
 ; return - Retouren
-; returnConfirmation - Returenbestätigung
+; returnConfirmation - Retourenbestätigung
 returnConfirmationHomepage = "Startseite"
 returnConfirmationInfo = "Wir haben Ihre Retoure erfasst. Wir informieren Sie über den weiteren Ablauf."
 returnConfirmationMyAccount = "Mein Konto"
 returnConfirmationThanks = "Vielen Dank!"
 returnConfirmationTitle = "Retoure erfasst"
-; returnConfirmation - Returenbestätigung
+; returnConfirmation - Retourenbestätigung
 ; returnHistory - Retourenhistorie
 returnHistory = "Retourenhistorie"
 returnHistoryDate = "Retourendatum"
