UPDATE rename section notFound to pageNotFound

--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -15,7 +15,7 @@ itemSearch = "Artikelsuche"
 legalDisclosure = "Impressum"
 login = "Login"
 myAccount = "Mein Konto"
-notFound = "Nicht gefunden"
+pageNotFound = "Seite nicht gefunden"
 notifications = "Benachrichtigungen"
 orderConfirmation = "Auftragsbestätigung"
 orderHistory = "Auftragshistorie"
