--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -301,11 +301,11 @@ myAccountSave = "Speichern"
 myAccountSettings = "Kontoeinstellungen"
 myAccountShippingAddresses = "Lieferadressen"
 ; myAccount - My account
-; notFound - Nicht gefunden
-notFoundHomepage = "Startseite"
-notFoundOops = "Ups, ein Fehler!"
-notFoundPage = "Die Seite, die du aufgerufen hast, wurde nicht gefunden."
-; notFound - Nicht gefunden
+; pageNotFound - Nicht gefunden
+pageNotFoundHomepage = "Startseite"
+pageNotFoundOops = "Ups, ein Fehler!"
+pageNotFoundPage = "Die Seite, die du aufgerufen hast, wurde nicht gefunden."
+; pageNotFound - Nicht gefunden
 ; notifications - Benachrichtigungen
 notificationsCalculateShippingFailed = "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber."
 notificationsCheckPassword="Die Passwörter stimmen nicht überein."
