--- a/resources/lang/en/Config.properties
+++ b/resources/lang/en/Config.properties
@@ -15,7 +15,7 @@ itemSearch = "Item search"
 legalDisclosure = "Legal disclosure"
 login = "Login"
 myAccount = "My account"
-notFound = "Not found"
+pageNotFound = "Page not found"
 notifications = "Notifications"
 orderConfirmation = "Order confirmation"
 orderHistory = "Order history"
