--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -2,19 +2,19 @@
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
 gridThreeColumnLayoutLabel = "Layout"
-gridThreeColumnLayoutOneStackedToTwo = "1 (gestapelt) : 2"
-gridThreeColumnLayoutOneToOneToOne = "1 : 1 : 1"
-gridThreeColumnLayoutOneToOneToTwo = "1 : 1 : 2"
-gridThreeColumnLayoutOneToTwoToOne = "1 : 2 : 1"
+gridThreeColumnLayoutOneStackedToTwo = "25% (gestapelt) : 75%"
+gridThreeColumnLayoutOneToOneToOne = "33% : 33% : 33%"
+gridThreeColumnLayoutOneToOneToTwo = "25% : 25% : 50%"
+gridThreeColumnLayoutOneToTwoToOne = "25% : 50% : 25%"
 gridThreeColumnLayoutTooltip = "Raster-Layout wählen."
-gridThreeColumnLayoutTwoToOneStacked = "2 : 1 (gestapelt)"
-gridThreeColumnLayoutTwoToOneToOne = "2 : 1 : 1"
+gridThreeColumnLayoutTwoToOneStacked = "75% : 25% (gestapelt)"
+gridThreeColumnLayoutTwoToOneToOne = "50% : 25% : 25%"
 gridTwoColumnLabel = "Raster mit 2 Spalten"
 gridTwoColumnLayoutLabel = "Layout"
-gridTwoColumnLayoutOneToOne = "1 : 1"
-gridTwoColumnLayoutOneToTwo = "1 : 2"
+gridTwoColumnLayoutOneToOne = "50% : 50%"
+gridTwoColumnLayoutOneToTwo = "25% : 75%"
 gridTwoColumnLayoutTooltip = "Raster-Layout wählen."
-gridTwoColumnLayoutTwoToOne = "2 : 1"
+gridTwoColumnLayoutTwoToOne = "75% : 25%"
 ; Image box
 imageBoxCategoryIdLabel = "Kategorie"
 imageBoxCategoryIdTooltip = "Name und Bild werden angezeigt."
