--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -2,19 +2,19 @@
 gridFourColumnLabel = "Four column grid"
 gridThreeColumnLabel = "Three column grid"
 gridThreeColumnLayoutLabel = "Layout"
-gridThreeColumnLayoutOneStackedToTwo = "1 (stacked) : 2"
-gridThreeColumnLayoutOneToOneToOne = "1 : 1 : 1"
-gridThreeColumnLayoutOneToOneToTwo = "1 : 1 : 2"
-gridThreeColumnLayoutOneToTwoToOne = "1 : 2 : 1"
+gridThreeColumnLayoutOneStackedToTwo = "25% (stacked) : 75%"
+gridThreeColumnLayoutOneToOneToOne = "33% : 33% : 33%"
+gridThreeColumnLayoutOneToOneToTwo = "25% : 25% : 50%"
+gridThreeColumnLayoutOneToTwoToOne = "25% : 50% : 25%"
 gridThreeColumnLayoutTooltip = "Select grid layout."
 gridThreeColumnLayoutTwoToOneStacked = "2 : 1 (stacked)"
 gridThreeColumnLayoutTwoToOneToOne = "2 : 1 : 1"
 gridTwoColumnLabel = "Two column grid"
 gridTwoColumnLayoutLabel = "Layout"
-gridTwoColumnLayoutOneToOne = "1 : 1"
-gridTwoColumnLayoutOneToTwo = "1 : 2"
+gridTwoColumnLayoutOneToOne = "50% : 50%"
+gridTwoColumnLayoutOneToTwo = "25% : 75%"
 gridTwoColumnLayoutTooltip = "Select grid layout."
-gridTwoColumnLayoutTwoToOne = "2 : 1"
+gridTwoColumnLayoutTwoToOne = "75% : 25%"
 ; Image box
 imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
