--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -2,19 +2,19 @@
 gridFourColumnLabel = "Four column grid"
 gridThreeColumnLabel = "Three column grid"
 gridThreeColumnLayoutLabel = "Layout"
-gridThreeColumnLayoutOneStackedToTwo = "25% (stacked) : 75%"
+gridThreeColumnLayoutOneStackedToTwo = "33% (stacked) : 66%"
 gridThreeColumnLayoutOneToOneToOne = "33% : 33% : 33%"
 gridThreeColumnLayoutOneToOneToTwo = "25% : 25% : 50%"
 gridThreeColumnLayoutOneToTwoToOne = "25% : 50% : 25%"
 gridThreeColumnLayoutTooltip = "Select grid layout."
-gridThreeColumnLayoutTwoToOneStacked = "2 : 1 (stacked)"
-gridThreeColumnLayoutTwoToOneToOne = "2 : 1 : 1"
+gridThreeColumnLayoutTwoToOneStacked = "66% : 33% (stacked)"
+gridThreeColumnLayoutTwoToOneToOne = "50% : 25% : 25%"
 gridTwoColumnLabel = "Two column grid"
 gridTwoColumnLayoutLabel = "Layout"
 gridTwoColumnLayoutOneToOne = "50% : 50%"
-gridTwoColumnLayoutOneToTwo = "25% : 75%"
+gridTwoColumnLayoutOneToTwo = "33% : 66%"
 gridTwoColumnLayoutTooltip = "Select grid layout."
-gridTwoColumnLayoutTwoToOne = "75% : 25%"
+gridTwoColumnLayoutTwoToOne = "66% : 33%"
 ; Image box
 imageBoxCategoryIdLabel = "Category"
 imageBoxCategoryIdTooltip = "Name and image are displayed."
