CHANGE Widget.properties - fix typo in titleBarLabel

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -64,6 +64,6 @@ itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
 ; Title bar
-titleBarLabel = "Titelleise"
+titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
 titleBarTextTooltip = "Text für die Titelleiste eingeben."
