CHANGE contentWidgets - update values for item list sorting

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -62,6 +62,22 @@ itemListPlaceholderItemPrice = "Artikelpreis"
 itemListPlaceholderListHeader = "Artikelliste"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Tag-ID eingeben, anhand welcher die Artikelliste erstellt wird."
+; Item sort
+itemAvailabilityAverageDays_asc = "Verfügbarkeit ⬆"
+itemAvailabilityAverageDays_desc = "Verfügbarkeit ⬇"
+itemName_asc = "Name A-Z"
+itemName_desc = "Name Z-A"
+itemPrice_asc = "Preis ⬆"
+itemPrice_desc = "Preis ⬇"
+itemProducerName_asc = "Hersteller A-Z"
+itemProducerName_desc = "Hersteller Z-A"
+itemRecommendedSorting = "Empfohlen"
+itemVariationCreateTimestamp_asc = "Älteste Artikel"
+itemVariationCreateTimestamp_desc = "Neueste Artikel"
+itemVariationCustomNumber_asc = "Variantennummer ⬆"
+itemVariationCustomNumber_desc = "Variantennummer ⬇"
+itemVariationLastUpdateTimestamp_asc = "Letzte Aktualisierung"
+itemVariationLastUpdateTimestamp_desc = "Erste Aktualisierung"
 ; Title bar
 titleBarLabel = "Titelleiste"
 titleBarTextLabel = "Titelleiste Text"
