--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -62,6 +62,22 @@ itemListPlaceholderItemPrice = "Item price"
 itemListPlaceholderListHeader = "Item list"
 itemListTagIdLabel = "Tag"
 itemListTagIdTooltip = "Enter the tag ID from which the item list is generated."
+; Item sort
+itemAvailabilityAverageDays_asc = "Availability ⬆"
+itemAvailabilityAverageDays_desc = "Availability ⬇"
+itemName_asc = "Name A-Z"
+itemName_desc = "Name Z-A"
+itemPrice_asc = "Price ⬆"
+itemPrice_desc = "Price ⬇"
+itemProducerName_asc = "Manufacturer A-Z"
+itemProducerName_desc = "Manufacturer Z-A"
+itemRecommendedSorting = "Recommended"
+itemVariationCreateTimestamp_asc = "Oldest items"
+itemVariationCreateTimestamp_desc = "Newest items"
+itemVariationCustomNumber_asc = "Variation number ⬆"
+itemVariationCustomNumber_desc = "Variation number ⬇"
+itemVariationLastUpdateTimestamp_asc = "Last update"
+itemVariationLastUpdateTimestamp_desc = "First update"
 ; Title bar
 titleBarLabel = "Title bar"
 titleBarTextLabel = "Title bar text"
