--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -27,10 +27,11 @@ imageBoxImageSizeTooltip = "Auswählen, um das Bild in voller Breite oder auf di
 imageBoxLabel = "Bilderbox"
 imageBoxPlaceholderImage = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_161c3653395%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_161c3653395%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3E%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
 imageBoxPlaceholderName = "Name"
-imageBoxStyleFullwidth = "Name (vollbreite Fußzeile) und Bild"
+imageBoxStyleBlockCaption = "Bild und Text (vollbreite Fußzeile)"
+imageBoxStyleFullwidth = "Bild und Text (volle Fläche)"
 imageBoxStyleLabel = "Stil der Box"
-imageBoxStyleLarge = "Name (groß) und Bild"
-imageBoxStyleSmall = "Name (klein) und Bild"
+imageBoxStyleInlineCaption = "Bild und Text (klein)"
+imageBoxStyleNoCaption = "Bild ohne Text"
 imageBoxStyleTooltip = "Stil der Box auswählen."
 imageBoxVariationIdLabel = "Varianten-ID"
 imageBoxVariationIdTooltip = "Name und Bild werden angezeigt. Wenn eine Kategorie ausgewählt ist, greift die Varianten-ID nicht."
