ADD config for appearance of each widget

--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,3 +1,12 @@
+; Global
+widgetAppearanceLabel = "Erscheinungsbild"
+widgetAppearanceTooltip = "Grundfarbe auswählen, um das Erscheinungsbild des Elements zu verändern."
+widgetAppearancePrimary = "Primär"
+widgetAppearanceSecondary = "Sekundär"
+widgetAppearanceSuccess = "Erfolg"
+widgetAppearanceInfo = "Information"
+widgetAppearanceWarning = "Warnung"
+widgetAppearanceDanger = "Gefahr"
 ; Grid
 gridFourColumnLabel = "Raster mit 4 Spalten"
 gridThreeColumnLabel = "Raster mit 3 Spalten"
