--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -1,3 +1,12 @@
+; Global
+widgetAppearanceLabel = "Appearance"
+widgetAppearanceTooltip = "Select a base color to change the appearance of the element."
+widgetAppearancePrimary = Primary
+widgetAppearanceSecondary = "Secondary"
+widgetAppearanceSuccess = "Success"
+widgetAppearanceInfo = "Information"
+widgetAppearanceWarning = "Warning"
+widgetAppearanceDanger = "Danger"
 ; Grid
 gridFourColumnLabel = "Four column grid"
 gridThreeColumnLabel = "Three column grid"
