--- a/resources/lang/de/Widget.properties
+++ b/resources/lang/de/Widget.properties
@@ -1,6 +1,6 @@
 ; Global
 widgetAppearanceLabel = "Erscheinungsbild"
-widgetAppearanceTooltip = "Grundfarbe auswählen, um das Erscheinungsbild des Elements zu verändern."
+widgetAppearanceTooltip = "Grundfarbe für das Erscheinungsbild des Elements wählen."
 widgetAppearancePrimary = "Primär"
 widgetAppearanceSecondary = "Sekundär"
 widgetAppearanceSuccess = "Erfolg"
