--- a/resources/lang/en/Widget.properties
+++ b/resources/lang/en/Widget.properties
@@ -1,6 +1,6 @@
 ; Global
 widgetAppearanceLabel = "Appearance"
-widgetAppearanceTooltip = "Select a base color to change the appearance of the element."
+widgetAppearanceTooltip = "Select the base colour of the appearance of the element."
 widgetAppearancePrimary = Primary
 widgetAppearanceSecondary = "Secondary"
 widgetAppearanceSuccess = "Success"
