CHANGE ShippingCountrySelect - replace placeholder with translation

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -183,6 +183,7 @@ footerStoreFeature3 = "100 Tage Rückgaberecht"
 ; footer - Footer
 ; header - Header
 headerBg = "Bulgarisch"
+headerChangeDeliveryCountry = "Bitte ändern Sie Ihre Adresse, um das Lieferland zu wechseln."
 headerCn = "Chinesisch"
 headerCompanyName = "Ceres Webshop"
 headerCountry = "Land"
