--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -183,6 +183,7 @@ footerStoreFeature3 = "100-day return policy"
 ; footer - Footer
 ; header - Header
 headerBg = "Bulgarian"
+headerChangeDeliveryCountry = "Please change your address in order to change the country of delivery."
 headerCn = "Chinese"
 headerCompanyName = "Ceres Webshop"
 headerCountry = "Country"
