UPDATE multilingualism migration UPDATE template properties UPDATE config deprecated bool

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -62,11 +62,11 @@ basketVAT = "MwSt."
 ; basket - Warenkorb
 ; cancellationForm - Widerrufsformular
 cancellationForm = "Widerrufs:hyphenformular"
-cancellationFormMetaDescription = "Meta-Beschreibung für das Widerrufsformular"
+cancellationFormMetaDescription = ""
 cancellationFormPrint = "Drucken"
 ; cancellationForm - Widerrufsformular
 ; cancellationRights - Widerrufsbelehrung
-cancellationRightsMetaDescription = "Meta-Beschreibung für die Widerrufsbelehrung"
+cancellationRightsMetaDescription = ""
 cancellationRights = "Widerrufs:hyphenrecht"
 ; cancellationRights - Widerrufsbelehrung
 ; checkout - Kaufabwicklung
@@ -106,7 +106,7 @@ contactEditSubject = "Bitte geben Sie einen Betreff ein."
 contactEnterConfirmEmail = "Bitte geben Sie eine gültige E-Mail-Adresse an."
 contactMail = "E-Mail"
 contactMessage = "Nachricht"
-contactMetaDescription = "Meta-Beschreibung für die Kontaktseite"
+contactMetaDescription = ""
 contactName = "Name"
 contactOpeningTimes = "Montag - Freitag, 00:00 - 24:00"
 contactOptional = "optional"
@@ -210,7 +210,7 @@ headerVn = "Vietnamesisch"
 ; header - Header
 ; homepage - Startseite
 homepageBack = "Zurück"
-homepageMetaDescription = "Meta-Beschreibung für die Startseite"
+homepageMetaDescription = ""
 homepageNext = "Nächste"
 homepageShowAll = "Alle ansehen"
 ; homepage - Startseite
@@ -224,9 +224,9 @@ itemExclusive = "zzgl."
 itemFilter = "Filter"
 itemFrom = "ab "
 itemInclVAT = "inkl. ges. MwSt."
-itemList1ListName = "Name"
-itemList2ListName = "Name"
-itemList3ListName = "Name"
+itemList1ListName = "Artikelliste"
+itemList2ListName = "Artikelliste"
+itemList3ListName = "Artikelliste"
 itemListLastSeen = "Zuletzt angesehen"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
@@ -254,7 +254,7 @@ itemSearchResults = "Suchergebnisse für:"
 ; itemSearch - Artikelsuche
 ; legalDisclosure - legalDisclosure
 legalDisclosure = "Impressum"
-legalDisclosureMetaDescription = "Meta-Beschreibung für das Impressum"
+legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; login - Login
 login = "Anmelden"
@@ -385,7 +385,7 @@ orderHistoryTime = "Uhr"
 ; orderHistory - Auftragshistorie
 ; privacyPolicy - Datenschutzerklärung
 privacyPolicy = "Daten:hyphenschutz:hyphenerklärung"
-privacyPolicyMetaDescription = "Meta-Beschreibung für die Datenschutzerklärung"
+privacyPolicyMetaDescription = ""
 ; privacyPolicy - Datenschutzerklärung
 ; reg - Registrierung
 regContactInformations = "Hinweise zur Registrierung"
@@ -501,7 +501,7 @@ singleItemWishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ; singleItem - Artikeleinzelansicht
 ; termsAndConditions - AGB
 termsAndConditions = "AGB"
-termsAndConditionsMetaDescription = "Meta-Beschreibung für die AGB"
+termsAndConditionsMetaDescription = ""
 ; termsAndConditions - AGB
 ; wishList - Wunschliste
 wishList = "Wunschliste"
