--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -62,11 +62,11 @@ basketVAT = "VAT"
 ; basket - Warenkorb
 ; cancellationForm - Widerrufsformular
 cancellationForm = "Cancellation:hyphen form"
-cancellationFormMetaDescription = "Meta description for cancellation form"
+cancellationFormMetaDescription = ""
 cancellationFormPrint = "Print"
 ; cancellationForm - Widerrufsformular
 ; cancellationRights - Widerrufsbelehrung
-cancellationRightsMetaDescription = "Meta description for cancellation rights"
+cancellationRightsMetaDescription = ""
 cancellationRights = "Cancellation:hyphen rights"
 ; cancellationRights - Widerrufsbelehrung
 ; checkout - Kaufabwicklung
@@ -106,7 +106,7 @@ contactEditSubject = "Please enter a subject."
 contactEnterConfirmEmail = "Please enter a valid email address."
 contactMail = "Email"
 contactMessage = "Message"
-contactMetaDescription = "Meta description for contact page"
+contactMetaDescription = ""
 contactName = "Name"
 contactOpeningTimes = "Monday - Friday, 00:00 - 24:00"
 contactOptional = "optional"
@@ -210,7 +210,7 @@ headerVn = "Vietnamese"
 ; header - Header
 ; homepage - Homepage
 homepageBack = "Back"
-homepageMetaDescription = "Meta description for homepage"
+homepageMetaDescription = ""
 homepageNext = "Next"
 homepageShowAll = "Show all"
 ; homepage - Homepage
@@ -224,9 +224,9 @@ itemExclusive = "excl."
 itemFilter = "Filter"
 itemFrom = "from "
 itemInclVAT = "Incl. VAT"
-itemList1ListName = "Name"
-itemList2ListName = "Name"
-itemList3ListName = "Name"
+itemList1ListName = "Item list"
+itemList2ListName = "Item list"
+itemList3ListName = "Item list"
 itemListLastSeen = "Last seen"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
@@ -254,7 +254,7 @@ itemSearchResults = "Search results for:"
 ; itemSearch - Item search
 ; legalDisclosure - Legal disclosure
 legalDisclosure = "Legal disclosure"
-legalDisclosureMetaDescription = "Meta description for legal disclosure"
+legalDisclosureMetaDescription = ""
 ; legalDisclosure - legalDisclosure
 ; login - Login
 login = "Log in"
@@ -385,7 +385,7 @@ orderHistoryTime = ""
 ; orderHistory - Auftragshistorie
 ; privacyPolicy - Datenschutzerklärung
 privacyPolicy = "Privacy:hyphen policy"
-privacyPolicyMetaDescription = "Meta description for privacy policy"
+privacyPolicyMetaDescription = ""
 ; privacyPolicy - Datenschutzerklärung
 ; reg - Registration
 regContactInformations = "Registration information"
@@ -501,7 +501,7 @@ singleItemWishListRemoved = "The item was removed from your wish list."
 ; singleItem - Single item view
 ; termsAndConditions - Terms and conditions
 termsAndConditions = "Terms and conditions"
-termsAndConditionsMetaDescription = "Meta description for terms and conditions"
+termsAndConditionsMetaDescription = ""
 ; termsAndConditions - AGB
 ; wishList - Wish list
 wishList = "Wish list"
