Added translations for page.properties (en)

--- a/resources/lang/en/Page.properties
+++ b/resources/lang/en/Page.properties
@@ -1,5 +1,5 @@
-StartPageCaption = "Startseite"
-CategoryCaption = "Kategorie"
-ItemCaption = "Artikel"
-Impressum = "Impressum"
-Contact = "Kontakt"
+StartPageCaption = "Homepage"
+CategoryCaption = "Category"
+ItemCaption = "Item"
+Impressum = "Legal disclosure"
+Contact = "Contact"
