ADD ShippingPrivacyHint - a new checkbox for the checkout to confirm the shipping privacy hint

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -88,6 +88,8 @@ checkoutNet = "Netto"
 checkoutPaymentMethod = "Zahlungsart"
 checkoutPrivacyPolicy = "Daten:hyphenschutz:hyphenerklärung"
 checkoutShippingAddress = "Lieferadresse"
+checkoutShippingPrivacyHint = "Ich bin damit einverstanden, dass meine E-Mail-Adresse bzw. meine Telefonnummer an :parcelServiceName :parcelServiceAddress weitergegeben wird, damit der Paketdienstleister vor der Zustellung der Ware zum Zwecke der Abstimmung eines Liefertermins per E-Mail oder Telefon Kontakt mit mir aufnehmen bzw. Statusinformationen zur Sendungszustellung übermitteln kann. Meine diesbezüglich erteilte Einwilligung kann ich jederzeit widerrufen."
+checkoutShippingPrivacyReseted = "Sie haben den Versanddienstleister gewechselt. Überprüfen Sie die Checkbox."
 checkoutShippingProfile = "Versandart"
 checkoutShippingProfileChanged="Die von Ihnen ausgewähle Versandart ist nicht mehr verfügbar."
 checkoutShippingProfileListChanged="Die Liste der Versandarten hat sich geändert."
