ADD missing item list translations

--- a/resources/lang/de/Template.properties
+++ b/resources/lang/de/Template.properties
@@ -229,6 +229,10 @@ itemList1ListName = "Artikelliste"
 itemList2ListName = "Artikelliste"
 itemList3ListName = "Artikelliste"
 itemListLastSeen = "Zuletzt angesehen"
+itemListXAccessory = "Zubehör"
+itemListXCollection = "Artikelpaket"
+itemListXReplacementPart = "Ersatzteil"
+itemListXSimilar = "Ähnlich"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
 itemPrice_asc = "Preis ⬆"
@@ -574,10 +578,6 @@ wishListRemoved = "Der Artikel wurde von der Wunschliste entfernt."
 ;     // singleItem
 ;     itemCategoryTopItems = "Top-Artikel"
 ;     itemEach = "Stück"
-;     itemListXAccessory = "Zubehör"
-;     itemListXCollection = "Artikelpaket"
-;     itemListXReplacementPart = "Ersatzteil"
-;     itemListXSimilar = "Ähnlich"
 ;     itemNew = "Neu"
 ;     itemRand = "Zufällige Artikel"
 ;     itemState = "Status"
