--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -229,6 +229,10 @@ itemList1ListName = "Item list"
 itemList2ListName = "Item list"
 itemList3ListName = "Item list"
 itemListLastSeen = "Last seen"
+itemListXAccessory = "Accessory"
+itemListXCollection = "Collection"
+itemListXReplacementPart = "Replacement part"
+itemListXSimilar = "Similar"
 itemName_asc = "Name A-Z"
 itemName_desc = "Name Z-A"
 itemPrice_asc = "Price ⬆"
@@ -561,10 +565,6 @@ wishListRemoved = "The item was removed from your wish list."
 ; itemCategoryStoreSpecialDesc = "Store special ⬇"
 ; itemCategoryTopItems = "Top items"
 ; itemEach = "Each"
-; itemListXAccessory = "Accessory"
-; itemListXCollection = "Collection"
-; itemListXReplacementPart = "Replacement part"
-; itemListXSimilar = "Similar"
 ; itemNew = "New"
 ; itemPleaseSelect = "Please select"
 ; itemRand = "Random items"
