CHANGE Template.properties - add "and" translation, required for the privacy hint

--- a/resources/lang/en/Template.properties
+++ b/resources/lang/en/Template.properties
@@ -88,7 +88,8 @@ checkoutNet = "Net"
 checkoutPaymentMethod = "Payment method"
 checkoutPrivacyPolicy = "Privacy:hyphen policy"
 checkoutShippingAddress = "Delivery address"
-checkoutShippingPrivacyHint = "I agree that my email address and my phone number will be transmitted to :parcelServiceName :parcelServiceAddress, so that they can contact me via email or phone in order to determine a delivery date or to communicate status information about the delivery of the shipment. I can revoke this agreement at any time."
+checkoutShippingPrivacyHint = "I agree that my email address and my phone number will be transmitted to :parcelServiceInformation, so that they can contact me via email or phone in order to determine a delivery date or to communicate status information about the delivery of the shipment. I can revoke this agreement at any time."
+checkoutShippingPrivacyHintAnd = "and"
 checkoutShippingPrivacyReseted = "Please note that changing the shipping service provider unchecked the checkbox."
 checkoutShippingProfile = "Shipping method"
 checkoutShippingProfileChanged="The selected shipping method is not available anymore."
