--- a/resources/lang/de/Config.properties
+++ b/resources/lang/de/Config.properties
@@ -263,106 +263,54 @@ myAccountOrderReturnInitialStatusLabel=Default status for return
 myAccountChangePaymentLabel=Allow customer to change the payment method
 myAccountConfirmationLinkLoginRedirectLabel=Forward to login page after clicking link in order confirmation
 billingAddressShowLabel=Show invoice address fields in address form (DE)
-billingAddressShowPossibleValueBillingAddressName1=Company
-billingAddressShowPossibleValueBillingAddressVatNumber=VAT number
-billingAddressShowPossibleValueBillingAddressSalutation=Form of address
-billingAddressShowPossibleValueBillingAddressTitle=Title
-billingAddressShowPossibleValueBillingAddressBirthday=Date of birth
-billingAddressShowPossibleValueBillingAddressName4=Name affix
-billingAddressShowPossibleValueBillingAddressAddress3=Additional address 1
-billingAddressShowPossibleValueBillingAddressAddress4=Additional address 2
-billingAddressShowPossibleValueBillingAddressStateId=State
-billingAddressShowPossibleValueBillingAddressPhoneNumber=Phone number
 billingAddressRequireLabel=Enable invoice address field validation (DE)
-billingAddressRequirePossibleValueBillingAddressName1=Company
-billingAddressRequirePossibleValueBillingAddressVatNumber=VAT number
-billingAddressRequirePossibleValueBillingAddressSalutation=Form of address
-billingAddressRequirePossibleValueBillingAddressTitle=Title
-billingAddressRequirePossibleValueBillingAddressBirthday=Date of birth
-billingAddressRequirePossibleValueBillingAddressName4=Name affix
-billingAddressRequirePossibleValueBillingAddressAddress3=Additional address 1
-billingAddressRequirePossibleValueBillingAddressAddress4=Additional address 2
-billingAddressRequirePossibleValueBillingAddressStateId=State
-billingAddressRequirePossibleValueBillingAddressPhoneNumber=Phone number
 deliveryAddressShowLabel=Show delivery address fields in address form (DE)
-deliveryAddressShowPossibleValueDeliveryAddressName1=Company
-deliveryAddressShowPossibleValueDeliveryAddressSalutation=Form of address
-deliveryAddressShowPossibleValueDeliveryAddressTitle=Title
-deliveryAddressShowPossibleValueDeliveryAddressName4=Name affix
-deliveryAddressShowPossibleValueDeliveryAddressAddress3=Additional address 1
-deliveryAddressShowPossibleValueDeliveryAddressAddress4=Additional address 2
-deliveryAddressShowPossibleValueDeliveryAddressStateId=State
-deliveryAddressShowPossibleValueDeliveryAddressPhoneNumber=Phone number
 deliveryAddressRequireLabel=Enable delivery address field validation (DE)
-deliveryAddressRequirePossibleValueDeliveryAddressName1=Company
-deliveryAddressRequirePossibleValueDeliveryAddressSalutation=Form of address
-deliveryAddressRequirePossibleValueDeliveryAddressTitle=Title
-deliveryAddressRequirePossibleValueDeliveryAddressName4=Name affix
-deliveryAddressRequirePossibleValueDeliveryAddressAddress3=Additional address 1
-deliveryAddressRequirePossibleValueDeliveryAddressAddress4=Additional address 2
-deliveryAddressRequirePossibleValueDeliveryAddressStateId=State
-deliveryAddressRequirePossibleValueDeliveryAddressPhoneNumber=Phone number
 billingAddressEnShowLabel=Show invoice address fields in address form (UK)
-billingAddressEnShowPossibleValueBillingAddressName1=Company
-billingAddressEnShowPossibleValueBillingAddressVatNumber=VAT number
-billingAddressEnShowPossibleValueBillingAddressSalutation=Form of address
-billingAddressEnShowPossibleValueBillingAddressTitle=Title
-billingAddressEnShowPossibleValueBillingAddressBirthday=Date of birth
-billingAddressEnShowPossibleValueBillingAddressName4=Name affix
-billingAddressEnShowPossibleValueBillingAddressAddress2=Address 2
-billingAddressEnShowPossibleValueBillingAddressAddress3=Address 3
-billingAddressEnShowPossibleValueBillingAddressAddress4=Address 4
-billingAddressEnShowPossibleValueBillingAddressPhoneNumber=Phone number
 billingAddressEnRequireLabel=Enable invoice address field validation (UK)
-billingAddressEnRequirePossibleValueBillingAddressName1=Company
-billingAddressEnRequirePossibleValueBillingAddressVatNumber=VAT number
-billingAddressEnRequirePossibleValueBillingAddressSalutation=Form of address
-billingAddressEnRequirePossibleValueBillingAddressTitle=Title
-billingAddressEnRequirePossibleValueBillingAddressBirthday=Date of birth
-billingAddressEnRequirePossibleValueBillingAddressName4=Name affix
-billingAddressEnRequirePossibleValueBillingAddressAddress2=Address 2
-billingAddressEnRequirePossibleValueBillingAddressAddress3=Address 3
-billingAddressEnRequirePossibleValueBillingAddressAddress4=Address 4
-billingAddressEnRequirePossibleValueBillingAddressPhoneNumber=Phone number
 deliveryAddressEnShowLabel=Show delivery address fields in address form (UK)
-deliveryAddressEnShowPossibleValueDeliveryAddressName1=Company
-deliveryAddressEnShowPossibleValueDeliveryAddressSalutation=Form of address
-deliveryAddressEnShowPossibleValueDeliveryAddressTitle=Title
-deliveryAddressEnShowPossibleValueDeliveryAddressName4=Name affix
-deliveryAddressEnShowPossibleValueDeliveryAddressAddress2=Address 2
-deliveryAddressEnShowPossibleValueDeliveryAddressAddress3=Address 3
-deliveryAddressEnShowPossibleValueDeliveryAddressAddress4=Address 4
-deliveryAddressEnShowPossibleValueDeliveryAddressPhoneNumber=Phone number
 deliveryAddressEnRequireLabel=Enable delivery address field validation (UK)
-deliveryAddressEnRequirePossibleValueDeliveryAddressName1=Company
-deliveryAddressEnRequirePossibleValueDeliveryAddressSalutation=Form of address
-deliveryAddressEnRequirePossibleValueDeliveryAddressTitle=Title
-deliveryAddressEnRequirePossibleValueDeliveryAddressName4=Name affix
-deliveryAddressEnRequirePossibleValueDeliveryAddressAddress2=Address 2
-deliveryAddressEnRequirePossibleValueDeliveryAddressAddress3=Address 3
-deliveryAddressEnRequirePossibleValueDeliveryAddressAddress4=Address 4
-deliveryAddressEnRequirePossibleValueDeliveryAddressPhoneNumber=Phone number
+addressFieldName1=Company
+addressFieldVatNumber=VAT number
+addressFieldSalutation=Form of address
+addressFieldTitle=Title
+addressFieldBirthday=Date of birth
+addressFieldName4=Name affix
+addressFieldAddress3=Additional address 1
+addressFieldAddress4=Additional address 2
+addressFieldStateId=State
+addressFieldPhoneNumber=Phone number
+addressFieldEnName1=Company
+addressFieldEnVatNumber=VAT number
+addressFieldEnSalutation=Form of address
+addressFieldEnTitle=Title
+addressFieldEnBirthday=Date of birth
+addressFieldEnName4=Name affix
+addressFieldEnAddress2=Address 2
+addressFieldEnAddress3=Address 3
+addressFieldEnAddress4=Address 4
+addressFieldEnPhoneNumber=Phone number
 LanguagesTab=Languages
 languageActiveLanguagesLabel=Active languages
-languageActiveLanguagesPossibleValueDe=German
-languageActiveLanguagesPossibleValueEn=English
-languageActiveLanguagesPossibleValueBg=Bulgarian
-languageActiveLanguagesPossibleValueFr=French
-languageActiveLanguagesPossibleValueIt=Italian
-languageActiveLanguagesPossibleValueEs=Spanish
-languageActiveLanguagesPossibleValueTr=Turkish
-languageActiveLanguagesPossibleValueNl=Dutch
-languageActiveLanguagesPossibleValuePl=Polish
-languageActiveLanguagesPossibleValuePt=Portuguese
-languageActiveLanguagesPossibleValueNn=Norwegian
-languageActiveLanguagesPossibleValueRo=Romanian
-languageActiveLanguagesPossibleValueDa=Danish
-languageActiveLanguagesPossibleValueSe=Swedish
-languageActiveLanguagesPossibleValueCz=Czech
-languageActiveLanguagesPossibleValueRu=Russian
-languageActiveLanguagesPossibleValueSk=Slovak
-languageActiveLanguagesPossibleValueCn=Chinese
-languageActiveLanguagesPossibleValueVn=Vietnamese
+languageActiveLanguagesDe=German
+languageActiveLanguagesEn=English
+languageActiveLanguagesBg=Bulgarian
+languageActiveLanguagesFr=French
+languageActiveLanguagesIt=Italian
+languageActiveLanguagesEs=Spanish
+languageActiveLanguagesTr=Turkish
+languageActiveLanguagesNl=Dutch
+languageActiveLanguagesPl=Polish
+languageActiveLanguagesPt=Portuguese
+languageActiveLanguagesNn=Norwegian
+languageActiveLanguagesRo=Romanian
+languageActiveLanguagesDa=Danish
+languageActiveLanguagesSe=Swedish
+languageActiveLanguagesCz=Czech
+languageActiveLanguagesRu=Russian
+languageActiveLanguagesSk=Slovak
+languageActiveLanguagesCn=Chinese
+languageActiveLanguagesVn=Vietnamese
 CurrenciesTab=Currencies
 currencyFormatLabel=Format of currencies
 currencyFormatPossibleValueName=ISO code
